syntax = "proto2";

package example.enumerations;

option go_package = "/lisk/proto";

message TransactionMessage {
  required uint32 moduleID = 1;
  required uint32 assetID = 2;
  required uint64 nonce = 3;
  required uint64 fee = 4;
  required bytes senderPublicKey = 5;
  required bytes asset = 6;
  repeated bytes signatures = 7;
}


